y.output

state 0
	$accept: .Program $end 

	ID  shift 5
	.  error

	Program  goto 1
	Statements  goto 2
	Statement  goto 3
	Identifier  goto 4

state 1
	$accept:  Program.$end 

	$end  accept
	.  error


state 2
	Program:  Statements.    (1)
	Statements:  Statements.Statement 

	ID  shift 5
	.  reduce 1 (src line 14)

	Statement  goto 6
	Identifier  goto 4

state 3
	Statements:  Statement.    (3)

	.  reduce 3 (src line 19)


state 4
	Statement:  Identifier.\";\" 

	";"  shift 7
	.  error


state 5
	Identifier:  ID.    (5)

	.  reduce 5 (src line 28)


state 6
	Statements:  Statements Statement.    (2)

	.  reduce 2 (src line 17)


state 7
	Statement:  Identifier \";\".    (4)

	.  reduce 4 (src line 21)


5 terminals, 5 nonterminals
6 grammar rules, 8/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
54 working sets used
memory: parser 5/240000
0 extra closures
3 shift entries, 1 exceptions
5 goto entries
1 entries saved by goto default
Optimizer space used: output 7/240000
7 table entries, 0 zero
maximum spread: 5, maximum offset: 5
